refactor: update database connection settings and improve query structure in query_dw.py and query_oltp.py

--- a/awx-lab/.env
+++ b/awx-lab/.env
@@ -1,7 +1,6 @@
 SQL_SERVER=localhost\SQLEXPRESS
 SQL_PORT=1433
 SQL_DB_OLTP=AdventureWorks2022
-SQL_DB_DW=AdventureWorksDW2022
-SQL_AUTH=windows
-SQL_USERNAME=sa
-SQL_PASSWORD=YourStrong!Passw0rd
+SQL_AUTH=sql
+SQL_USERNAME=sa     
+SQL_PASSWORD=123456
